--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebSystemContext": "server=127.0.0.1;user=user;password=123123123;database=saleswebsystem"
+  }
 }
